dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(backstep, 0.3)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE
AC_SUBST(VERSION)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

AC_CHECK_HEADER([X11/SM/SMlib.h], [],
  [AC_MSG_ERROR([Session management library (libsm) missing. It is part of the X server distribution. Try installing the libsm-dev package.])]
)

AC_PATH_XTRA
AC_CHECK_LIB(Xpm, XpmCreatePixmapFromData, [X_LIBS="$X_LIBS -lXpm"],
    [echo "*** The required libXpm library was not found ***"
     exit 1],
    $X_LIBS $X_EXTRA_LIBS -lX11)

X_EXTRA_LIBS="$X_EXTRA_LIBS -lICE -lSM"
AC_SUBST(X_CFLAGS)
AC_SUBST(X_LFLAGS)
AC_SUBST(X_LIBS)
AC_SUBST(X_EXTRA_LIBS)

pkg_modules="gtk+-2.0 >= 2.0.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

GETTEXT_PACKAGE=backstep
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])

dnl Add the languages which your application supports here.
ALL_LINGUAS=""
AM_GLIB_GNU_GETTEXT

if $PKG_CONFIG --exists xcomposite xfixes xdamage xrender 2> /dev/null; then
    PKG_CHECK_MODULES(RENDER, xcomposite >= 1.0 xfixes xdamage xrender)
    AC_DEFINE([HAVE_RENDER], [1], [Define to enable Xrender suppport])
fi

AC_OUTPUT([
Makefile
src/Makefile
po/Makefile.in
])

